--- a/templates/shorten.html
+++ b/templates/shorten.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>URL Shortener</title>
+    <title>Shortened URL</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Shortened URL:</h1>
-    <p>{{ short_url }}</p>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    text-align: center;
+}
+
+.container {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    margin-bottom: 20px;
+    color: #333;
+}
+
+#shortened-url {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.back-button {
+    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.back-button:hover {
+    background-color: #0062cc;
+}
+    </style>
+    <div class="container">
+        <h1>Your Shortened URL</h1>
+        <p id="shortened-url">{{ short_url }}</p>
+        <a href="index" class="back-button">Back to Home</a>
+        
+    </div>
 </body>
 </html>
